--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,13 +11,14 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  video_player: ^2.6.1
+  # video_player: ^2.6.1
   share_plus: ^6.3.2
   image_picker: ^0.8.7+3
   url_launcher: ^6.1.10
   pretty_qr_code: ^2.0.3
   fl_chart: ^0.62.0
   provider: ^6.0.5
+  cached_video_player: ^2.0.4
 
 dev_dependencies:
   flutter_test:
