--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   fl_chart: ^0.62.0
   provider: ^6.0.5
   cached_video_player: ^2.0.4
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
